deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-app
  namespace: stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment-app
  template:
    metadata:
      annotations:
        git-tag: {TAG}
      labels:
        app: sentiment-app
    spec:
      containers:
      - name: sentiment-container
        image: artifacts.tekuro.io/sentiment:latest
        ports:
        - containerPort: 5000
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
