deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
  namespace: stock
spec:
  selector:
    app: sentiment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
